# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  14 Apr 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
  Handle other binary paths for LVM.

  09 Apr 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
  defaults/keymaps/keymapList, defaults/keymaps/sf.map:
  Add keymap "sf" from Pentoo

  08 Apr 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.29

  08 Apr 2012; Mike Auty <ikelos@gentoo.org> gen_bootloader.sh:
  Support for Grub 2, adjustements by Tomasz Wasiak

  08 Apr 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh,
  genkernel.conf:
  Add "fastest" to supported initrd compressions

  08 Apr 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Support comression "lzop" (not just "lzo") as wrongly advertised by comments
  in genkernel.conf before

  08 Apr 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Be more helpful when requested compression is not available

  08 Apr 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Error out on unknown initrd compression, reported by Peter Gantner (bug
  #411197)

  08 Apr 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Fix initrd compression "gzip", reported by Peter Gantner (bug #411197)

  30 Mar 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.28

  29 Mar 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  Restore original /dev/tty after GPG (bug #410073), report and initial patch
  by Brendan Pike

  22 Mar 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.27

  22 Mar 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Fail hard on LUKS inclusion error (bug #409277), advise about
  sys-fs/cryptsetup[static], drop support for cryptsetup binary from /bin/
