@@ -6,6 +6,9 @@
 # $Id$
 
   14 Apr 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
+  Release copy_binaries function as public domain.
+
+  14 Apr 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
   Handle other binary paths for LVM.
 
   09 Apr 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
